hphp/hack/test/typecheck/ppl/class_inheritance.php.exp
File "class_inheritance.php", line 9, characters 7-16:
a class annotated with <<__PPL>> cannot extend non <<__PPL>> class: BaseClass (Typing[4257])
File "class_inheritance.php", line 5, characters 7-15:
Declaration is here
