hphp/hack/test/typecheck/ppl/class_inheritance.php
<?hh // strict

// A ppl class can only extend other ppl classes

class BaseClass {
}

<<__PPL>>
class ChildClass extends BaseClass {
}
